# kotlin-jni-example

./: .gitignore  CMakeLists.txt  MANIFEST.MF  README.md
src/sam/: NativeSample.kt
